--- a/index.html
+++ b/index.html
@@ -191,29 +191,29 @@
               <div class="slider-container">
                 <div class="slider">
                   <div class="slide active">
-                    <img src="images/factory-1.jpg" alt="Kristall Factory" />
+                    <img src="images/about/about1.jpg" alt="Kristall Factory" />
                     <div class="slide-caption" data-i18n="slide_caption_1">
                       Bizning zamonaviy ishlab chiqarish majmuamiz
                     </div>
                   </div>
                   <div class="slide">
-                    <img src="images/factory-2.jpg" alt="Salt Harvesting" />
+                    <img src="images/about/about2.jpg" alt="Salt Harvesting" />
                     <div class="slide-caption" data-i18n="slide_caption_2">
                       Barqaror hosil yig'ish jarayoni
                     </div>
                   </div>
                   <div class="slide">
-                    <img src="images/factory-3.jpg" alt="Quality Control" />
+                    <img src="images/about/about3.avif" alt="Quality Control" />
                     <div class="slide-caption" data-i18n="slide_caption_3">
                       Qattiq sifat nazorati
                     </div>
                   </div>
                 </div>
                 <div class="slider-controls">
-                  <button class="slider-prev">
+                  <button class="slider-prev" style="background-color: #e82839;">
                     <i class="fas fa-chevron-left"></i>
                   </button>
-                  <button class="slider-next">
+                  <button class="slider-next" style="background-color: #e82839;">
                     <i class="fas fa-chevron-right"></i>
                   </button>
                 </div>
@@ -236,7 +236,7 @@
           <div class="products-grid">
             <div class="product-card">
               <div class="product-image">
-                <img src="images/product-1.jpg" alt="Himalayan Pink Salt" />
+                <img src="images/qolgani/onekg.jpg" alt="Himalayan Pink Salt" />
                 <div class="product-badge" data-i18n="badge_popular">
                   Mashhur
                 </div>
@@ -247,13 +247,13 @@
                   Minerallarga boy, pishirish va sog'liq uchun foyda.
                 </p>
                 <div class="product-actions">
-                  <span class="product-price">4.300 sum</span>
+                  <span class="product-price"data-i18n="price">Narxi kelishilgan holda</span>
                 </div>
               </div>
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/product-2.jpg" alt="Sea Salt Flakes" />
+                <img src="images/qolgani/twokg.jpg" alt="Sea Salt Flakes" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_2">Kristall Tuz 2kg</h3>
@@ -262,13 +262,13 @@
                   ideallashtirish tugatish uchun.
                 </p>
                 <div class="product-actions">
-                  <span class="product-price">6.800 sum</span>
+                  <span class="product-price" data-i18n="price">Narxi kelishilgan holda</span>
                 </div>
               </div>
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/product-3.jpg" alt="Black Lava Salt" />
+                <img src="images/qolgani/TWO.jpg"Black Lava Salt" />
                 <div class="product-badge" data-i18n="badge_new">Yangi</div>
               </div>
               <div class="product-info">
@@ -278,7 +278,7 @@
                   uchun ajoyib.
                 </p>
                 <div class="product-actions">
-                  <span class="product-price">1.900 sum</span>
+                  <span class="product-price" data-i18n="price">Narxi kelishilgan holda</span>
                 </div>
               </div>
             </div>
@@ -296,7 +296,7 @@
           <div class="news-grid">
             <article class="news-card">
               <div class="news-image">
-                <img src="images/news-1.jpg" alt="Sustainable Mining" />
+                <img src="images/news/news1.jpg" alt="Sustainable Mining" />
               </div>
               <div class="news-content">
                 <h3 data-i18n="news_1_title">
@@ -310,7 +310,7 @@
             </article>
             <article class="news-card">
               <div class="news-image">
-                <img src="images/news-2.jpg" alt="New Product Line" />
+                <img src="images/news/news2.jpg" alt="New Product Line" />
               </div>
               <div class="news-content">
                 <h3 data-i18n="news_2_title">Yangi infuzion tuz liniyasi</h3>
@@ -322,7 +322,7 @@
             </article>
             <article class="news-card">
               <div class="news-image">
-                <img src="images/news-3.jpg" alt="Award Winning" />
+                <img src="images/news/news3.jpg" alt="Award Winning" />
               </div>
               <div class="news-content">
                 <h3 data-i18n="news_3_title">Xalqaro sifat mukofoti</h3>
