--- a/index.html
+++ b/index.html
@@ -234,26 +234,21 @@
             </p>
           </div>
           <div class="products-grid">
+            <!-- Eski Mahsulotlar -->
             <div class="product-card">
               <div class="product-image">
-                <img src="images/qolgani/onekg.jpg" alt="Himalayan Pink Salt" />
-                <div class="product-badge" data-i18n="badge_popular">
-                  Mashhur
-                </div>
+                <img src="images/vishiy/Йодированная (2).png" alt="Himalayan Pink Salt" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_1">Kristall Tuz 1kg</h3>
                 <p data-i18n="product_1_desc">
                   Minerallarga boy, pishirish va sog'liq uchun foyda.
                 </p>
-                <div class="product-actions">
-                  <span class="product-price"data-i18n="price">Narxi kelishilgan holda</span>
-                </div>
               </div>
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/qolgani/twokg.jpg" alt="Sea Salt Flakes" />
+                <img src="images/vishiy/Белоснежная Соль (2).png" alt="Sea Salt Flakes" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_2">Kristall Tuz 2kg</h3>
@@ -261,15 +256,11 @@
                   Nozik piramida shaklidagi yoriqlar tez eriydi, ovaqatlarni
                   ideallashtirish tugatish uchun.
                 </p>
-                <div class="product-actions">
-                  <span class="product-price" data-i18n="price">Narxi kelishilgan holda</span>
-                </div>
               </div>
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/qolgani/TWO.jpg"Black Lava Salt" />
-                <div class="product-badge" data-i18n="badge_new">Yangi</div>
+                <img src="images/vishiy/Белоснежная Соль 2 (2).png"Black Lava Salt" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_3">Bek Barakot 500 gr</h3>
@@ -277,9 +268,57 @@
                   Dramatik rang va nozik tutunli ta'mga ega mayda tuz, taqdimot
                   uchun ajoyib.
                 </p>
-                <div class="product-actions">
-                  <span class="product-price" data-i18n="price">Narxi kelishilgan holda</span>
-                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-image">
+                <img src="images/vishiy/ЭКСТРА Соль (2).PNG"Black Lava Salt" />
+              </div>
+              <div class="product-info">
+                <h3 data-i18n="product_4">Ekstra tuz 800gr</h3>
+                <p data-i18n="product_4_desc">
+                  Ekstra osh tuzi, 800gr
+                </p>
+              </div>
+            </div>
+
+            <!-- Yangi Mahsulotlar -->
+             <div class="product-card">
+              <div class="product-image">
+                <img src="images/qolgani/2,5КГ.png" />
+                <div class="product-badge" data-i18n="badge_new">Yangi</div>
+              </div>
+              <div class="product-info">
+                <h3 data-i18n="product_5">Yangi tuz 2.5kg</h3>
+                <p data-i18n="product_5_desc">
+                  Yangi tuz 2.5kg
+                </p>
+              </div>
+            </div>
+
+            <div class="product-card">
+              <div class="product-image">
+                <img src="images/qolgani/2КГ.png" />
+                <div class="product-badge" data-i18n="badge_new">Yangi</div>
+              </div>
+              <div class="product-info">
+                <h3 data-i18n="product_6">Yangi tuz 2kg</h3>
+                <p data-i18n="product_6_desc">
+                  Yangi tuz 2kg
+                </p>
+              </div>
+            </div>
+
+            <div class="product-card">
+              <div class="product-image">
+                <img src="images/qolgani/1КГ.png" />
+                <div class="product-badge" data-i18n="badge_new">Yangi</div>
+              </div>
+              <div class="product-info">
+                <h3 data-i18n="product_7">Yangi tuz 1kg</h3>
+                <p data-i18n="product_7_desc">
+                  Yangi tuz 1kg
+                </p>
               </div>
             </div>
           </div>
