add lazy loading in img

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <!-- Eski Mahsulotlar -->
             <div class="product-card">
               <div class="product-image">
-                <img src="images/vishiy/Йодированная (2).png" alt="Himalayan Pink Salt" />
+                <img src="images/vishiy/1kg.png" alt="Himalayan Pink Salt" loading="lazy"/>
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_1">Kristall Tuz 1kg</h3>
@@ -248,7 +248,7 @@
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/vishiy/Белоснежная Соль (2).png" alt="Sea Salt Flakes" />
+                <img src="images/vishiy/Белоснежная Соль (2).png" alt="Sea Salt Flakes" loading="lazy" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_2">Kristall Tuz 2kg</h3>
@@ -260,7 +260,7 @@
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/vishiy/Белоснежная Соль 2 (2).png"Black Lava Salt" />
+                <img src="images/vishiy/Белоснежная Соль 2 (2).png" loading="lazy" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_3">Bek Barakot 500 gr</h3>
@@ -272,7 +272,7 @@
             </div>
             <div class="product-card">
               <div class="product-image">
-                <img src="images/vishiy/ЭКСТРА Соль (2).PNG"Black Lava Salt" />
+                <img src="images/vishiy/ЭКСТРА Соль (2).PNG" loading="lazy" />
               </div>
               <div class="product-info">
                 <h3 data-i18n="product_4">Ekstra tuz 800gr</h3>
@@ -285,7 +285,7 @@
             <!-- Yangi Mahsulotlar -->
              <div class="product-card">
               <div class="product-image">
-                <img src="images/qolgani/2,5КГ.png" />
+                <img src="images/qolgani/2,5КГ.png" loading="lazy" />
                 <div class="product-badge" data-i18n="badge_new">Yangi</div>
               </div>
               <div class="product-info">
@@ -298,7 +298,7 @@
 
             <div class="product-card">
               <div class="product-image">
-                <img src="images/qolgani/2КГ.png" />
+                <img src="images/qolgani/2КГ.png" loading="lazy" />
                 <div class="product-badge" data-i18n="badge_new">Yangi</div>
               </div>
               <div class="product-info">
@@ -311,7 +311,7 @@
 
             <div class="product-card">
               <div class="product-image">
-                <img src="images/qolgani/1КГ.png" />
+                <img src="images/qolgani/1КГ.png" loading="lazy" />
                 <div class="product-badge" data-i18n="badge_new">Yangi</div>
               </div>
               <div class="product-info">
